...
    <string name="place_holder_task_id">Task Id</string>
    <string name="place_holder_task_status">Delivered</string>
    <string name="title_activity_bottom_navigation">bottom_navigation</string>
    <string name="title_home">Home</string>
    <string name="return_tasks">Return tasks</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="to_stanbic_bank">To Stanbic Bank</string>
    <string name="title_notifications">Notifications</string>
    <string name="payment_reg">Payment Registration</string>
    <string name="transaction_reg">Transaction Registration</string>
    <string name="transaction_history">Transaction History</string>
    <string name="btm_nav_title_call">Call</string>
    <string name="btm_nav_title_chat">Chat</string>
    <string name="btm_nav_title_more">More</string>
    <string name="title_activity_side_drawer">SideDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
...
    <!-- Messages for action confirmation dialogs -->
    <string name="CONFIRM_APP_CLOSE">Are you sure you want to exit?</string>
    <string name="CONFIRM_LOG_OUT">Are you sure you want to logout?</string>
    <string name="back_exit_confirmation">Press back again to exit </string>
    <string name="ACTION_YES">Yes</string>
    <string name="ACTION_NO">No</string>
    <string name="ACTION_OK">OK</string>
    <string name="ACTION_CANCEL">Cancel</string>
    <string name="FORCE_UPDATE">Your application update is available</string>
    <string name="UNSTABLE_STATE">Something went wrong, application will be closed!!</string>
    <string name="UPDATE_AVAILABLE">There is newer version of this application available, click OK to upgrade now</string>


...
    <string name="enter_balance_hint">UGX 1,00,000,00</string>
    <string name="ugx_label">UGX</string>
    <string name="item_label">Item<font color='#FF0000'>*</font></string>
    <string name="description_hint">Enter Description</string>
    <string name="amount_label">Amount<font color='#FF0000'>*</font></string>
    <string name="receipt_label">Receipt</string>
    <string name="save">SAVE</string>
    <string name="enter_price_hint">0</string>

    <string name="end_date_transaction_label">End Date</string>
    <string name="tv_date_label">End Date</string>
    <string name="place_holder_transaction_amount">Amount</string>
    <string name="place_holder_item">Item</string>
...
